some content gets displayed... still working out how it fits

--- a/stylesheets/gulp-control.less
+++ b/stylesheets/gulp-control.less
@@ -5,4 +5,9 @@
 @import "ui-variables";
 
 .gulp-control {
+  background: @app-background-color;
+  color: @text-color;
+  h1 {
+    color: #fff;
+  }
 }
