--- a/stylesheets/gulp-control.less
+++ b/stylesheets/gulp-control.less
@@ -7,6 +7,20 @@
 .gulp-control {
   background: @app-background-color;
   color: @text-color;
+
+  .tasks {
+    float: left;
+    height: 100%;
+    width: 25%;
+    border-right: 1px solid white;
+  }
+
+  .output {
+    float: left;
+    height: 100%;
+    width: 75%;
+  }
+
   h1 {
     color: #fff;
   }
