make containers scrollable

--- a/stylesheets/gulp-control.less
+++ b/stylesheets/gulp-control.less
@@ -14,6 +14,7 @@
     background: #303030;
     border-right: 1px solid rgba(0, 0, 0, 0.5);
     padding: 10px;
+    overflow-y: scroll;
 
     .task {
       cursor: pointer;
@@ -36,5 +37,6 @@
     width: 75%;
     background: @tool-panel-background-color;
     padding: 10px;
+    overflow-y: scroll;
   }
 }
