running indicator, i.e. green while going

--- a/stylesheets/gulp-control.less
+++ b/stylesheets/gulp-control.less
@@ -23,6 +23,9 @@
 
       &.active {
         background: #404040;
+        &.running {
+          background: #407040;
+        }
       }
 
       &:hover {
