format pre to fit in with the rest of the fonts

--- a/stylesheets/gulp-control.less
+++ b/stylesheets/gulp-control.less
@@ -41,5 +41,10 @@
     background: @tool-panel-background-color;
     padding: 10px;
     overflow-y: scroll;
+
+    pre {
+      padding: 0;
+      font-size: 11px;
+    }
   }
 }
