--- a/stylesheets/gulp-control.less
+++ b/stylesheets/gulp-control.less
@@ -45,6 +45,11 @@
     pre {
       padding: 0;
       font-size: 11px;
+      background: @tool-panel-background-color;
+
+      &.error {
+        color: #b33;
+      }
     }
   }
 }
