--- a/stylesheets/gulp-control.less
+++ b/stylesheets/gulp-control.less
@@ -22,14 +22,16 @@
       border-radius: 4px;
 
       &.active {
-        background: #404040;
+        background: #484848;
+        color: #fff;
+
         &.running {
-          background: #407040;
+          background: #487048;
         }
       }
 
       &:hover {
-        background: #505050;
+        background: #404040;
       }
     }
   }
