--- a/stylesheets/gulp-control.less
+++ b/stylesheets/gulp-control.less
@@ -22,16 +22,16 @@
       border-radius: 4px;
 
       &.active {
-        background: @button-background-color-selected;
+        background: @button-background-color;
         color: @text-color-highlight;
 
         &.running {
-          background: @background-color-success;
+          background: @button-background-color-selected;
         }
       }
 
       &:hover {
-        background: @button-background-color;
+        color: @text-color-highlight;
       }
     }
   }
